[package]
name = "termmap"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ureq = "2"
terminal_size = "0.4"
crossterm = "0.28"
qrcode = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
